--- a/style.css
+++ b/style.css
@@ -167,11 +167,12 @@ a {
 .hobbies-icons {
     display: flex;
     justify-content: space-around;
-    padding: 5px 0;
+    padding: 7px 0;
     border-bottom-left-radius: 15px;
     background-color: #d9bfa5da;
 
 }
+
 
 footer {
     display: flex;
@@ -192,5 +193,14 @@ footer {
 .birthday {
     font-size: 25px;
     padding: 15px;
-    
+}
+
+.code-snippet {
+    background-color: #D2AE9A;
+    border-radius: 15px;
+    padding: 3px;
+}
+
+h3 {
+    margin: 0;
 }
